@@ -40,6 +40,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
         overloaded functions and procedures
 498317  FdBadUse is not a valid CoreError type in a suppression
         even though it's generated by --gen-suppressions=yes
+498143  False positive on EVIOCGRAB ioctl
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
